--- a/scss/style.css
+++ b/scss/style.css
@@ -73,30 +73,23 @@ button {
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 1280px;
   padding: 0px;
   margin: 0 auto;
-  height: 100%;
 }
 
 video {
   width: 100%;
-  margin-top: -145px;
-}
-
-#overlay {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: absolute;
-  width: 100%;
-  height: 99%;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url(image.png);
-  padding: 64px 80px 80px 80px;
-  z-index: 1;
-  top: 0%;
+  z-index: -1;
 }
 
 header {
-  position: relative;
-  height: 100%;
+  height: 769px;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45));
 }
 
 #burger,
@@ -112,6 +105,7 @@ nav {
 }
 
 .header {
+  padding-top: 64px;
   display: flex;
   justify-content: space-between;
 }
@@ -126,6 +120,9 @@ nav {
   font-weight: 700;
 }
 
+.middle {
+  padding-bottom: 64px;
+}
 .middle__title {
   margin-bottom: 32px;
 }
@@ -142,11 +139,6 @@ nav {
 }
 
 @media (max-width: 1280px) {
-  .container {
-    width: 1005px;
-    height: 100%;
-  }
-
   #overlay {
     padding: 30px 10px;
     height: 98%;
@@ -156,25 +148,19 @@ nav {
     max-width: 620px;
   }
 }
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   .container {
-    width: 940px;
-  }
-}
-@media (max-width: 960px) {
-  .container {
-    width: 748px;
-    padding: 16px;
+    padding: 0 16px;
   }
 
-  #overlay {
-    padding: 0px;
+  .img-logo {
+    z-index: 5;
   }
 
   nav {
     display: none;
     background: rgba(139, 0, 255, 0.9);
-    width: 320px;
+    width: 100%;
     height: 256px;
     position: absolute;
     right: 0%;
@@ -253,26 +239,17 @@ nav {
     line-height: 32px;
   }
 }
-@media (max-width: 768px) {
-  .container {
-    width: 556px;
+@media (max-width: 420px) {
+  header {
+    height: 500px;
   }
 }
-@media (max-width: 576px) {
-  .container {
-    width: 400px;
-  }
-
-  nav {
-    width: 100%;
-  }
-
+@media (max-width: 375px) {
   header {
     height: 336px;
   }
-}
-@media (max-width: 420px) {
-  .container {
-    width: 320px;
+
+  .header {
+    padding-top: 16px;
   }
 }/*# sourceMappingURL=style.css.map */
