--- a/scss/style.css
+++ b/scss/style.css
@@ -160,7 +160,7 @@ nav {
   nav {
     display: none;
     background: rgba(139, 0, 255, 0.9);
-    width: 100%;
+    max-width: 100%;
     height: 256px;
     position: absolute;
     right: 0%;
