--- a/scss/style.scss
+++ b/scss/style.scss
@@ -84,7 +84,7 @@ video {
 }
 header {
   height: 769px;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45));
 }
 #burger,
 [for="burger"] {
@@ -112,7 +112,7 @@ nav {
   }
 }
 .middle {
-    padding-bottom: 64px;
+  padding-bottom: 64px;
   &__title {
     margin-bottom: 32px;
   }
@@ -131,7 +131,6 @@ nav {
 }
 
 @media (max-width: 1280px) {
-
   #overlay {
     padding: 30px 10px;
     height: 98%;
@@ -142,106 +141,103 @@ nav {
 }
 
 @media (max-width: 1024px) {
-
 }
 
 @media (max-width: 960px) {
-
-
 }
 
 @media (max-width: 768px) {
-    .container{
-        padding:0 16px;
+  .container {
+    padding: 0 16px;
+  }
+  .img-logo {
+    z-index: 5;
+  }
+  nav {
+    display: none;
+    background: rgba(139, 0, 255, 0.9);
+    max-width: 100%;
+    height: 256px;
+    position: absolute;
+    right: 0%;
+    top: 0%;
+    padding-top: 96px;
+  }
+  .logo {
+    width: 127px;
+    z-index: 5;
+  }
+  [for="burger"] {
+    display: flex;
+    position: absolute;
+    color: #ffffff;
+    right: 16px;
+    font-size: 30px;
+    height: 40px;
+    width: 40px;
+    background-color: #8b00ff;
+    z-index: 2;
+    &::before {
+      content: "";
+      background-image: url(../img/Menu.svg);
+      background-repeat: no-repeat;
+      position: absolute;
+      width: 18px;
+      height: 18px;
+      top: 7px;
+      right: 13px;
     }
-    .img-logo{
-        z-index: 5;
+  }
+  #burger:checked + label + nav {
+    display: block;
+    animation: show 0.5s ease;
+  }
+  #burger:checked + [for="burger"] {
+    background-color: #2f214c;
+    &::before {
+      content: "";
+      background-image: url(../img/Menunone.svg);
     }
-    nav {
-        display: none;
-        background: rgba(139, 0, 255, 0.9);
-        width: 100%;
-        height: 256px;
-        position: absolute;
-        right: 0%;
-        top: 0%;
-        padding-top: 96px;
+  }
+  @keyframes show {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  .header {
+    &__navigation {
+      flex-direction: column;
+      align-items: center;
+      li {
+        margin-bottom: 16px;
       }
-      .logo {
-        width: 127px;
-        z-index: 5;
-      }
-      [for="burger"] {
-        display: flex;
-        position: absolute;
-        color: #ffffff;
-        right: 16px;
-        font-size: 30px;
-        height: 40px;
-        width: 40px;
-        background-color: #8b00ff;
-        z-index: 2;
-        &::before {
-          content: "";
-          background-image: url(../img/Menu.svg);
-          background-repeat: no-repeat;
-          position: absolute;
-          width: 18px;
-          height: 18px;
-          top: 7px;
-          right: 13px;
-        }
-      }
-      #burger:checked + label + nav {
-        display: block;
-        animation: show 0.5s ease;
-      }
-      #burger:checked + [for="burger"] {
-        background-color: #2f214c;
-        &::before {
-          content: "";
-          background-image: url(../img/Menunone.svg);
-        }
-      }
-      @keyframes show {
-        0% {
-          opacity: 0;
-        }
-        100% {
-          opacity: 1;
-        }
-      }
-      .header {
-        &__navigation {
-          flex-direction: column;
-          align-items: center;
-          li {
-            margin-bottom: 16px;
-          }
-        }
-      }
-      h2 {
-        font-size: 24px;
-        line-height: 32px;
-      }
+    }
+  }
+  h2 {
+    font-size: 24px;
+    line-height: 32px;
+  }
 }
 
 @media (max-width: 576px) {
 }
 
 @media (max-width: 420px) {
-    header{
-        height: 500px;
-    }
+  header {
+    height: 500px;
+  }
 }
 
 @media (max-width: 375px) {
-    header{
-        height: 336px;
-    }
-    .header{
-        padding-top: 16px;
-    }
+  header {
+    height: 336px;
+  }
+  .header {
+    padding-top: 16px;
+  }
 }
 
 @media (max-width: 320px) {
