--- a/scss/style.css
+++ b/scss/style.css
@@ -101,6 +101,8 @@ header {
 nav {
   background: #8b00ff;
   padding: 24px 48px;
+  display: flex;
+  align-items: center;
 }
 
 .header {
@@ -145,6 +147,21 @@ nav {
   background: #2f214c;
 }
 
+h3 {
+  font-family: "GothamBold";
+  font-size: 32px;
+  line-height: 36px;
+}
+
+h4 {
+  font-size: 20px;
+  line-height: 24px;
+  font-family: "GothamBold";
+}
+
+.second {
+  display: flex;
+}
 .second__left {
   width: 720px;
   height: 536px;
@@ -155,18 +172,18 @@ nav {
   width: 720px;
   height: 536px;
   padding: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.second__right h3 span {
+  border-bottom: 8px solid #8B00FF;
+}
+.second__right p {
+  line-height: 20px;
 }
 
-@media (max-width: 1280px) {
-  nav {
-    max-width: 620px;
-  }
-}
-@media (max-width: 768px) {
-  .container {
-    padding: 0 16px;
-  }
-
+@media (max-width: 960px) {
   .img-logo {
     z-index: 5;
   }
@@ -174,7 +191,7 @@ nav {
   nav {
     display: none;
     background: rgba(139, 0, 255, 0.9);
-    max-width: 100%;
+    width: 100%;
     height: 256px;
     position: absolute;
     right: 0%;
@@ -246,11 +263,17 @@ nav {
   }
   .header__navigation li {
     margin-bottom: 16px;
+    margin-right: 0px;
   }
 
   h2 {
     font-size: 24px;
     line-height: 32px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    padding: 0 16px;
   }
 }
 @media (max-width: 420px) {
