--- a/scss/style.css
+++ b/scss/style.css
@@ -170,19 +170,41 @@ h4 {
 }
 .second__right {
   width: 720px;
-  height: 536px;
   padding: 80px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+}
+.second__right h3 {
+  margin-bottom: 32px;
 }
 .second__right h3 span {
-  border-bottom: 8px solid #8B00FF;
+  border-bottom: 8px solid #8b00ff;
+}
+.second__right__our {
+  margin-bottom: 32px;
+}
+.second__right h4 {
+  margin-bottom: 32px;
+}
+.second__right__largest {
+  margin-bottom: 15px;
 }
 .second__right p {
   line-height: 20px;
 }
 
+.section2 {
+  background: #8b00ff;
+}
+
+@media (max-width: 1280px) {
+  .second__right {
+    padding: 60px;
+  }
+}
+@media (max-width: 1024px) {
+  .second__right {
+    padding: 40px;
+  }
+}
 @media (max-width: 960px) {
   .img-logo {
     z-index: 5;
@@ -270,10 +292,39 @@ h4 {
     font-size: 24px;
     line-height: 32px;
   }
+
+  .second__right {
+    max-width: 606px;
+    padding: 15px;
+  }
 }
 @media (max-width: 768px) {
   .container {
     padding: 0 16px;
+  }
+
+  .second {
+    flex-direction: column-reverse;
+  }
+  .second__left {
+    width: 100%;
+    margin: 0px;
+  }
+  .second__left img {
+    max-width: 100%;
+  }
+  .second__right {
+    max-width: 100%;
+    margin-bottom: 24px;
+  }
+}
+@media (max-width: 576px) {
+  h3 {
+    font-size: 20px;
+  }
+
+  h4 {
+    font-size: 16px;
   }
 }
 @media (max-width: 420px) {
