--- a/scss/style.scss
+++ b/scss/style.scss
@@ -155,28 +155,47 @@ h4 {
   }
   &__right {
     width: 720px;
-    height: 536px;
     padding: 80px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    h3{
-        span{
-            border-bottom:8px solid #8B00FF;;
-        }
+    h3 {
+      margin-bottom: 32px;
+      span {
+        border-bottom: 8px solid #8b00ff;
+      }
+    }
+    &__our {
+      margin-bottom: 32px;
+    }
+    h4 {
+      margin-bottom: 32px;
+    }
+    &__largest {
+      margin-bottom: 15px;
     }
     p {
       line-height: 20px;
     }
   }
 }
+.section2 {
+  background: #8b00ff;
+}
 @media (max-width: 1440px) {
 }
 
 @media (max-width: 1280px) {
+  .second {
+    &__right {
+      padding: 60px;
+    }
+  }
 }
 
 @media (max-width: 1024px) {
+  .second {
+    &__right {
+      padding: 40px;
+    }
+  }
 }
 
 @media (max-width: 960px) {
@@ -251,15 +270,42 @@ h4 {
     font-size: 24px;
     line-height: 32px;
   }
+  .second {
+    &__right {
+      max-width: 606px;
+      padding: 15px;
+    }
+  }
 }
 
 @media (max-width: 768px) {
   .container {
     padding: 0 16px;
   }
+
+  .second {
+    flex-direction: column-reverse;
+    &__left {
+        width: 100%;
+      margin: 0px;
+      img{
+          max-width: 100%;
+      }
+    }
+    &__right {
+        max-width: 100%;
+        margin-bottom: 24px;
+    }
+  }
 }
 
 @media (max-width: 576px) {
+  h3 {
+    font-size: 20px;
+  }
+  h4 {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 420px) {
