--- a/scss/style.css
+++ b/scss/style.css
@@ -167,6 +167,7 @@ h4 {
 
 .second {
   display: flex;
+  align-items: center;
 }
 .second__left {
   flex: none;
@@ -175,9 +176,11 @@ h4 {
 .second__left img {
   width: 100%;
   height: 100%;
+  display: flex;
 }
 .second__right {
-  padding: 80px;
+  padding-left: 80px;
+  max-width: 640px;
 }
 .second__right h3 {
   margin-bottom: 32px;
@@ -187,14 +190,16 @@ h4 {
 }
 .second__right__our {
   margin-bottom: 32px;
+  line-height: 20px;
 }
 .second__right h4 {
   margin-bottom: 32px;
 }
 .second__right__largest {
   margin-bottom: 15px;
+  line-height: 20px;
 }
-.second__right p {
+.second__right__we {
   line-height: 20px;
 }
 
@@ -270,6 +275,35 @@ footer {
 
 .logo-foot {
   max-width: 101px;
+}
+
+.section3 {
+  background: #8b00ff;
+}
+
+.whatright {
+  padding-left: 0px;
+  padding-right: 80px;
+}
+.whatright h3 {
+  margin-bottom: 24px;
+}
+.whatright__text {
+  font-size: 20px;
+  line-height: 24px;
+  font-family: "GothamBold";
+}
+
+.white {
+  padding: 80px 0;
+}
+.white__cont {
+  color: #2F214C;
+  text-align: center;
+  max-width: 1120px;
+}
+.white__cont__study {
+  margin-bottom: 15px;
 }
 
 @media (max-width: 1440px) {
@@ -406,7 +440,6 @@ footer {
     max-width: 100%;
   }
   .second__right {
-    padding: 24px 0;
     max-width: 100%;
   }
   .second__right h2 {
@@ -447,6 +480,10 @@ footer {
   .company__info__extra span {
     text-align: center;
   }
+
+  .second-what {
+    flex-direction: column;
+  }
 }
 @media (max-width: 860px) {
   .footer {
@@ -467,6 +504,14 @@ footer {
   }
   .company__info__extra p {
     font-size: 24px;
+  }
+
+  .container2 {
+    padding: 0px;
+  }
+
+  .second__right {
+    padding: 24px 16px;
   }
 }
 @media (max-width: 600px) {
