--- a/scss/style.scss
+++ b/scss/style.scss
@@ -152,16 +152,19 @@ h4 {
 }
 .second {
   display: flex;
+  align-items: center;
   &__left {
     flex: none;
     width: 50%;
     img {
       width: 100%;
       height: 100%;
+      display: flex;
     }
   }
   &__right {
-    padding: 80px;
+      padding-left: 80px;
+      max-width:640px;
     h3 {
       margin-bottom: 32px;
       span {
@@ -170,15 +173,17 @@ h4 {
     }
     &__our {
       margin-bottom: 32px;
+      line-height: 20px;
     }
     h4 {
       margin-bottom: 32px;
     }
     &__largest {
       margin-bottom: 15px;
-    }
-    p {
       line-height: 20px;
+    }
+    &__we{
+        line-height: 20px;
     }
   }
 }
@@ -255,6 +260,33 @@ footer {
 }
 .logo-foot {
   max-width: 101px;
+}
+.section3 {
+  background: #8b00ff;
+}
+.whatright {
+    padding-left: 0px;
+    padding-right: 80px;
+  h3 {
+    margin-bottom: 24px;
+  }
+  &__text {
+    font-size: 20px;
+    line-height: 24px;
+    font-family: "GothamBold";
+  }
+}
+.white {
+    padding:80px 0;
+    &__cont{
+        color:#2F214C;
+        text-align: center;
+        max-width: 1120px;
+        &__study{
+            margin-bottom: 15px;
+        }
+    }
+
 }
 @media (max-width: 1440px) {
   .company {
@@ -395,7 +427,6 @@ footer {
       }
     }
     &__right {
-      padding: 24px 0;
       max-width: 100%;
       h2 {
         margin-bottom: 16px;
@@ -438,6 +469,9 @@ footer {
       }
     }
   }
+  .second-what{
+      flex-direction: column;
+  }
 }
 @media (max-width: 860px) {
   .footer {
@@ -464,6 +498,14 @@ footer {
       }
     }
   }
+  .container2{
+    padding:0px;
+}
+.second{
+    &__right{
+        padding: 24px 16px;
+    }
+}
 }
 @media (max-width: 600px) {
   footer {
@@ -491,8 +533,10 @@ footer {
     position: absolute;
     bottom: 40px;
   }
+
 }
 @media (max-width: 576px) {
+
   h3 {
     font-size: 20px;
   }
