--- a/scss/style.css
+++ b/scss/style.css
@@ -177,6 +177,8 @@ h4 {
   width: 100%;
   height: 536px;
   display: flex;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .second__right {
   padding-left: 80px;
@@ -212,21 +214,13 @@ h4 {
   text-align: center;
   margin-bottom: 32px;
 }
-.company__line {
-  width: 100%;
-  height: 1px;
-  background-color: rgba(255, 255, 255, 0.45);
-}
 .company__info {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
   grid-column-gap: 16px;
+  grid-gap: 16px;
   align-items: center;
-}
-.company__info__line {
-  width: 1px;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.45);
 }
 .company__info__extra {
   width: 405px;
