--- a/scss/style.scss
+++ b/scss/style.scss
@@ -160,6 +160,7 @@ h4 {
       width: 100%;
       height: 536px;
       display: flex;
+      object-fit: cover;
     }
   }
   &__right {
@@ -196,21 +197,13 @@ h4 {
     text-align: center;
     margin-bottom: 32px;
   }
-  &__line {
-    width: 100%;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.45);
-  }
   &__info {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
     grid-column-gap: 16px;
+    grid-gap: 16px;
     align-items: center;
-    &__line {
-      width: 1px;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.45);
-    }
     &__extra {
       width: 405px;
       padding: 64px;
