--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,7 +80,7 @@ button {
   max-width: 1440px;
   padding: 0px;
 }
-video {
+.video-head {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -102,6 +102,17 @@ nav {
   display: flex;
   align-items: center;
 }
+.activehtml {
+  position: relative;
+  &::before {
+    content: "";
+    background: #fff;
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    bottom: 0%;
+  }
+}
 .header {
   padding-top: 64px;
   display: flex;
@@ -111,7 +122,7 @@ nav {
     align-items: center;
     li {
       line-height: 15px;
-      margin-right: 91.21px;
+      margin-right: 96.21px;
       &:last-child {
         margin-right: 0px;
       }
@@ -122,12 +133,14 @@ nav {
   }
 }
 .middle {
-  padding-bottom: 64px;
+  padding-bottom: 80px;
   &__title {
-    margin-bottom: 32px;
+    margin-bottom: 40px;
   }
-  p {
+  &__mission {
     max-width: 720px;
+    font-family: Gothambold;
+    font-size: 20px;
     line-height: 24px;
   }
 }
@@ -137,7 +150,7 @@ nav {
   justify-content: space-between;
   height: 100%;
 }
-.section1 {
+.wrapper {
   background: #2f214c;
 }
 h3 {
@@ -156,17 +169,19 @@ h4 {
   &__left {
     flex: none;
     width: 50%;
-    img {
+    &__image {
       width: 100%;
-      height: 536px;
+      height: 514px;
       display: flex;
       object-fit: cover;
     }
+    &__image1 {
+      height: 536px;
+    }
   }
   &__right {
-      padding-left: 80px;
-      max-width:640px;
-    h3 {
+    padding: 80px;
+    &__vest {
       margin-bottom: 32px;
       span {
         border-bottom: 8px solid #8b00ff;
@@ -180,20 +195,20 @@ h4 {
       margin-bottom: 32px;
     }
     &__largest {
-      margin-bottom: 15px;
+      margin-bottom: 10px;
       line-height: 20px;
     }
-    &__we{
-        line-height: 20px;
+    &__we {
+      line-height: 20px;
     }
   }
 }
-.section2 {
+.information {
   background: #8b00ff;
   padding: 64px 0;
 }
 .company {
-  h3 {
+  &__numbers {
     text-align: center;
     margin-bottom: 32px;
   }
@@ -201,11 +216,7 @@ h4 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
-    grid-column-gap: 16px;
-    grid-gap: 16px;
-    align-items: center;
     &__extra {
-      width: 405px;
       padding: 64px;
       p {
         font-family: "GothamBold";
@@ -222,7 +233,19 @@ h4 {
     }
   }
 }
-
+.item1,
+.item3 {
+  border-right: 1px solid white;
+  width: 100%;
+}
+.item1,
+.item2 {
+  border-top: 1px solid white;
+  width: 100%;
+}
+.second-what {
+  flex-direction: column;
+}
 footer {
   background: #3d2f59;
   padding: 40px 0;
@@ -245,6 +268,10 @@ footer {
     align-items: center;
     li {
       margin-right: 64px;
+      a{
+        font-family: "GothamBold";
+        line-height: 20px;
+      }
       &:last-child {
         margin-right: 0px;
       }
@@ -254,13 +281,11 @@ footer {
 .logo-foot {
   max-width: 101px;
 }
-.section3 {
+.wrap {
   background: #8b00ff;
 }
 .whatright {
-    padding-left: 0px;
-    padding-right: 80px;
-  h3 {
+  &__vest {
     margin-bottom: 24px;
   }
   &__text {
@@ -270,24 +295,40 @@ footer {
   }
 }
 .white {
-    padding:80px 0;
-    &__cont{
-        color:#2F214C;
-        text-align: center;
-        max-width: 1120px;
-        &__study{
-            margin-bottom: 15px;
-        }
+  padding: 80px 0;
+  &__cont {
+    color: #2f214c;
+    text-align: center;
+    max-width: 1120px;
+    line-height: 20px;
+    &__study {
+      margin-bottom: 13px;
     }
-
+  }
+}
+.second-what {
+  display: flex;
+}
+.camera {
+  height: 480px;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+.live {
+  position: relative;
+  &__livestream {
+    position: absolute;
+    max-width: 200px;
+    height: 80px;
+    top: 59px;
+    right: 89px;
+  }
 }
 @media (max-width: 1440px) {
-  .company {
-    &__info {
-      &__extra {
-        width: 400px;
-      }
-    }
+  header {
+    height: 668px;
   }
 }
 
@@ -300,7 +341,6 @@ footer {
   .company {
     &__info {
       &__extra {
-        width: 350px;
         padding: 40px 20px;
         p {
           font-size: 50px;
@@ -311,13 +351,6 @@ footer {
   }
 }
 @media (max-width: 1150px) {
-  .company {
-    &__info {
-      &__extra {
-        width: 290px;
-      }
-    }
-  }
 }
 @media (max-width: 1024px) {
   .second {
@@ -415,7 +448,7 @@ footer {
     flex-direction: column-reverse;
     &__left {
       width: 100%;
-      img {
+      &__image {
         max-width: 100%;
       }
     }
@@ -435,43 +468,13 @@ footer {
       }
     }
   }
-  .company {
-    &__line {
-      display: none;
-    }
-    &__info {
-      align-items: start;
-      grid-template-columns: repeat(2, 1fr);
-      grid-column-gap: 32px;
-      &__line {
-        display: none;
-      }
-      &__extra {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 0px;
-        width: 100%;
-        p {
-          font-size: 30px;
-          line-height: 30px;
-        }
-        span {
-          text-align: center;
-        }
-      }
-    }
-  }
-  .second-what{
-      flex-direction: column;
-  }
 }
 @media (max-width: 860px) {
   .footer {
     flex-direction: column;
     align-self: start;
     &__info {
-      margin-bottom: 32px;
+      margin-bottom: 24px;
     }
   }
 }
@@ -480,9 +483,6 @@ footer {
     padding: 0 16px;
   }
   .company {
-    &__line {
-      display: none;
-    }
     &__info {
       &__extra {
         p {
@@ -491,23 +491,23 @@ footer {
       }
     }
   }
-  .container2{
-    padding:0px;
-}
-.second{
-    &__right{
-        padding: 24px 16px;
+  .container2 {
+    padding: 0px;
+  }
+  .second {
+    &__right {
+      padding: 24px 16px;
     }
-    &__left{
-      img{
+    &__left {
+      &__image {
         height: 100%;
       }
     }
-}
+  }
 }
 @media (max-width: 600px) {
   footer {
-    padding-bottom: 90px;
+    padding-bottom: 80px;
     position: relative;
   }
   .footer {
@@ -523,18 +523,16 @@ footer {
       flex-direction: column;
       li {
         margin-right: 0px;
-        margin-bottom: 16px;
+        margin-bottom: 13px;
       }
     }
   }
-  .copirights {
+  .copyright {
     position: absolute;
     bottom: 40px;
   }
-
 }
 @media (max-width: 576px) {
-
   h3 {
     font-size: 20px;
   }
@@ -542,30 +540,122 @@ footer {
     font-size: 16px;
   }
   .second {
+    &__right {
+      &__vest {
+        span {
+          border-bottom: 4px solid #8b00ff;
+        }
+      }
+    }
     &__left {
       p {
         font-size: 14px;
       }
     }
   }
-  .section2 {
+  .information {
     padding: 24px 0;
+  }
+  .company {
+    &__info {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  .item1,
+  .item2,
+  .item3 {
+    border: none;
+  }
+  .item4,
+  .item5 {
+    border-bottom: 1px solid white;
+  }
+  .item4,
+  .item6 {
+    position: relative;
+    &::before {
+      content: "";
+      border-right: 1px solid white;
+      position: absolute;
+      height: 90%;
+      right: 0%;
+      top: 5%;
+    }
   }
 }
 
 @media (max-width: 420px) {
   header {
-    height: 500px;
-  }
-}
-
-@media (max-width: 375px) {
-  header {
     height: 336px;
   }
   .header {
     padding-top: 16px;
+    margin-bottom: 28px;
   }
+  .middle {
+    padding-bottom: 24px;
+    &__title {
+      margin-bottom: 28px;
+    }
+    &__mission {
+      font-size: 16px;
+      line-height: 20px;
+    }
+  }
+  h4 {
+    line-height: 20px;
+  }
+  .second {
+    &__left {
+      &__image1 {
+        height: 251px;
+      }
+    }
+    &__right {
+      &__vest {
+        margin-bottom: 16px;
+      }
+      p {
+        line-height: 18px;
+      }
+    }
+  }
+  .information {
+    padding: 0px;
+    padding-top: 24px;
+  }
+  .company {
+    &__numbers{
+    margin-bottom: 0px; 
+    line-height: 24px; 
+    }
+    &__info {
+      &__extra {
+        padding:23px 16px ;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        p {
+          text-align: center;
+        }
+        span {
+          display: flex;
+          text-align: center;
+          line-height: 20px;
+        }
+      }
+    }
+  }
+  .item4,
+  .item6 {
+    &::before {
+      height: 65%;
+      top: 21%;
+    }
+  }
+}
+
+@media (max-width: 375px) {
 }
 
 @media (max-width: 320px) {
