--- a/scss/style.scss
+++ b/scss/style.scss
@@ -235,16 +235,13 @@ h4 {
 }
 .item1,
 .item3 {
-  border-right: 1px solid white;
+  border-right: 1px solid rgba(255, 255, 255, 0.45);
   width: 100%;
 }
 .item1,
 .item2 {
-  border-top: 1px solid white;
+  border-top: 1px solid rgba(255, 255, 255, 0.45);
   width: 100%;
-}
-.second-what {
-  flex-direction: column;
 }
 footer {
   background: #3d2f59;
@@ -268,7 +265,7 @@ footer {
     align-items: center;
     li {
       margin-right: 64px;
-      a{
+      a {
         font-family: "GothamBold";
         line-height: 20px;
       }
@@ -326,6 +323,32 @@ footer {
     right: 89px;
   }
 }
+.market {
+  text-align: center;
+  padding: 64px 0px;
+  &__vest {
+    margin-bottom: 48px;
+  }
+  &__prod {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    &__products {
+      padding: 76px 80px;
+      font-size: 20px;
+      line-height: 24px;
+      font-family: GothamBold;
+      text-align: start;
+    }
+  }
+}
+.product1, .product2{
+ border-bottom: 1px solid rgba(255, 255, 255, 0.45);;
+ width: 100%;
+}
+.product1, .product3{
+  border-right: 1px solid rgba(255, 255, 255, 0.45);;
+  height: 100%;
+ }
 @media (max-width: 1440px) {
   header {
     height: 668px;
@@ -568,14 +591,14 @@ footer {
   }
   .item4,
   .item5 {
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.45);;
   }
   .item4,
   .item6 {
     position: relative;
     &::before {
       content: "";
-      border-right: 1px solid white;
+      border-right: 1px solid rgba(255, 255, 255, 0.45);;
       position: absolute;
       height: 90%;
       right: 0%;
@@ -625,13 +648,13 @@ footer {
     padding-top: 24px;
   }
   .company {
-    &__numbers{
-    margin-bottom: 0px; 
-    line-height: 24px; 
+    &__numbers {
+      margin-bottom: 0px;
+      line-height: 24px;
     }
     &__info {
       &__extra {
-        padding:23px 16px ;
+        padding: 23px 16px;
         display: flex;
         flex-direction: column;
         align-items: center;
